--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -56,5 +56,34 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
 
 <!-- test -->
+
+<div class="topnav" id="myTopnav">
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About Me</a>
+  <a href="https://github.com/coledu">Github</a>
+  <a href="https://www.linkedin.com/in/dusty-cole-b96a92145/">LinkedIn</a>
+  <a href="#">Contact</a>
+</div>
+<span style="color:white;text-align:center;font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> 
+
+
+
+
+
+</div>
+
+
+
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+}
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+}
+</script>
+
 </body>
 </html>
