--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -5,6 +5,18 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
+  <header>
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="tutorials"><a class="active" href="#">Tutorials</a></li>
+        <li class="about"><a href="#">About</a></li>
+        <li class="news"><a href="#">Newsletter</a></li>
+        <li class="contact"><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </header>
+
 
 <h1>HEADER</h1>
 <hr>
@@ -57,33 +69,8 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p
 
 <!-- test -->
 
-<div class="topnav" id="myTopnav">
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About Me</a>
-  <a href="https://github.com/coledu">Github</a>
-  <a href="https://www.linkedin.com/in/dusty-cole-b96a92145/">LinkedIn</a>
-  <a href="#">Contact</a>
-</div>
-<span style="color:white;text-align:center;font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> 
 
 
-
-
-
-</div>
-
-
-
-
-<script>
-function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-}
-function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-}
-</script>
 
 </body>
 </html>
