--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -8,11 +8,11 @@
   <header>
     <div class="nav">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
-        <li class="tutorials"><a class="active" href="#">Tutorials</a></li>
-        <li class="about"><a href="#">About</a></li>
-        <li class="news"><a href="#">Newsletter</a></li>
-        <li class="contact"><a href="#">Contact</a></li>
+        <li class="home"><a class="active" href="myfristwebpage.html">Home</a></li>
+        <li class="tutorials"><a href="tutorials.html">Tutorials</a></li>
+        <li class="about"><a href="aboutpage.html">About</a></li>
+        <li class="news"><a href="news.html">Newsletter</a></li>
+        <li class="contact"><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </header>
