--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -75,6 +75,8 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
 </div>
 
+<footer>Skye's testing footer</footer>
+
 <!-- test -->
 
 
