add hr and strong to footer

--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -75,7 +75,10 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
 </div>
 
-<footer>Skye's testing footer</footer>
+<footer>
+<hr>
+<strong>Skye's testing footer</strong>
+</footer>
 
 <!-- test -->
 
