--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -3,6 +3,9 @@
 <head>
 	<title>myfristwebpage</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<meta name="Homepage">
+	<meta charset="UTF-8">
+	<meta name="viewpoint"  content="width=device-width, intial-scale=1">
 </head>
 <body>
   <header>
@@ -79,10 +82,6 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p
 <hr>
 <strong>Skye's testing footer</strong>
 </footer>
-
-<!-- test -->
-
-
 
 
 </body>
