--- a/news.html
+++ b/news.html
@@ -3,6 +3,8 @@
 <head>
 	<title>news</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<meta charset="UTF-8">
+	<meta name="viewpoint"  content="width=device-width, intial-scale=1">
 </head>
 <body>
 	  <header>
