--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<meta name="Homepage">
 	<meta charset="UTF-8">
-	<meta name="viewpoint"  content="width=device-width, intial-scale=1">
+	<link rel="icon" href="home-icon.png">
 </head>
 <body>
   <header>
