add button and change default css

--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -56,6 +56,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 </em></p>
 </section>
+<button id=act-button>Activate</button>
 
 <footer>
 <hr>
