--- a/myfristwebpage.html
+++ b/myfristwebpage.html
@@ -21,15 +21,12 @@
     </nav>
   </header>
 
-
 <h1>HEADER</h1>
 <hr>
 
 <aside>
 	<img src="doggo.jpeg" id=side-pic>
 </aside>
-
-
 
 <section>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -42,15 +39,11 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-
-<br>
-<br>
 <br>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat.
-</p>
+consequat.</p>
 <p><em> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -62,7 +55,6 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 <hr>
 <strong>Skye's testing footer</strong>
 </footer>
-
 
 </body>
 </html>
