--- a/tutorials.html
+++ b/tutorials.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	  <header>
-    <div class="nav">
+    <div id=top-nav>
       <ul>
         <li class="home"><a href="myfristwebpage.html">Home</a></li>
         <li class="tutorials"><a class="active" href="tutorials.html">Tutorials</a></li>
